Response submit php setup

--- a/report.html
+++ b/report.html
@@ -15,7 +15,7 @@
 
 <body>
     <section class="contact-clean">
-        <form method="post">
+        <form action="responseSubmit.php">
             <h2 class="text-center">Wildlife Tracking Report</h2>
             <div class="form-group" style="text-align: left;"><label style="margin-bottom: 0px;">* Animal Observed:</label><select class="form-control" style="margin-bottom: 12px;" required="">
                     <option value="" selected="">- Select an Option -</option>
