--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
   <div>
     <iframe src="https://qgiscloud.com/megreen/BC_Tracks/" title="map" width="100%" height="80%">
   </div>
+  <footer class="footer-basic">
+      <ul class="list-inline text-center">
+          <li class="list-inline-item"><a href="index.html">Home</a></li>
+          <li class="list-inline-item"></li>
+          <li class="list-inline-item text-center"><a href="#">About</a></li>
+          <li class="list-inline-item"></li>
+          <li class="list-inline-item"></li>
+      </ul>
+      <p class="copyright">BC Tracks - BC Hacks 2.0&nbsp; &nbsp; &nbsp;2021</p>
+  </footer>
 </body>
 </html>
