Made footer visible

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </div>
   <a href="report.html"><img src="assets/img/Form Button Icon.png" width="50px"></a>
   <div>
-    <iframe src="https://qgiscloud.com/megreen/BC_Tracks/" title="map" width="100%" height="80%">
+    <iframe src="https://qgiscloud.com/megreen/BC_Tracks/" title="map" width="100%" height="70%">
   </div>
-  <footer class="footer-basic">
+  <footer class="footer-basic" height ="10%">
       <ul class="list-inline text-center">
           <li class="list-inline-item"><a href="index.html">Home</a></li>
           <li class="list-inline-item"></li>
