--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <html>
 <head>
-  <title>
-    BC Tracks
-  </title>
+  <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+      <title>BC Tracks</title>
+      <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
+      <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
+      <link rel="stylesheet" href="assets/css/Footer-Basic.css">
+      <link rel="stylesheet" href="assets/css/Header-Blue.css">
+      <link rel="stylesheet" href="assets/css/styles.css">
+  </head>
 </head>
 <body style="background-color:#1484C3;">
   <div id="logo" style="text-align:center">
@@ -22,5 +30,7 @@
       </ul>
       <p class="copyright">BC Tracks - BC Hacks 2.0&nbsp; &nbsp; &nbsp;2021</p>
   </footer>
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
