--- a/report.html
+++ b/report.html
@@ -24,7 +24,7 @@
                     <option value="Bear">Bear</option>
                     <option value="Cougar">Cougar</option>
                     <option value="Coyote">Coyote</option>
-                    <option value="Dear">Dear</option>
+                    <option value="Dear">Deer</option>
                     <option value="Wolf">Wolf</option>
                     <option value="">Other</option>
                 </select><input class="form-control" type="text" name="species_other" placeholder="Other animal..."><input class="form-control" type="text" name="species" placeholder="Species (optional)" style="padding-bottom: 12px;padding-top: 12px;margin-top: 22px;"><label style="padding-top: 22px;">If any of the following are selected, a copy of this report will automatically be forwarded to your municipal government for review.</label>
