--- a/report.html
+++ b/report.html
@@ -15,9 +15,9 @@
 
 <body>
     <section class="contact-clean">
-        <form action="responseSubmit.php" method="post">
+        <form action="responseSubmit.php" method="POST">
             <h2 class="text-center">Wildlife Tracking Report</h2>
-            <div class="form-group" style="text-align: left;"><label style="margin-bottom: 0px;">* Animal Observed:</label><select class="form-control" style="margin-bottom: 12px;" required="">
+            <div class="form-group" style="text-align: left;"><label style="margin-bottom: 0px;">* Animal Observed:</label><select class="form-control" name="species" style="margin-bottom: 12px;" required="">
                     <option value="" selected="">- Select an Option -</option>
                     <option value="Bat">Bat</option>
                     <option value="Bird">Bird</option>
