--- a/report.html
+++ b/report.html
@@ -17,7 +17,7 @@
     <section class="contact-clean">
         <form action="responseSubmit.php" method="POST">
             <h2 class="text-center">Wildlife Tracking Report</h2>
-            <div class="form-group" style="text-align: left;"><label style="margin-bottom: 0px;">* Animal Observed:</label><select class="form-control" name="species" style="margin-bottom: 12px;" required="">
+            <div class="form-group" style="text-align: left;"><label style="margin-bottom: 0px;">* Animal Observed:</label><select name="species" class="form-control" style="margin-bottom: 12px;" required="">
                     <option value="" selected="">- Select an Option -</option>
                     <option value="Bat">Bat</option>
                     <option value="Bird">Bird</option>
@@ -47,6 +47,10 @@
     </section>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script>
+    //Pass location to php
+
+    </script>
 </body>
 
 </html>
