--- a/report.html
+++ b/report.html
@@ -18,7 +18,7 @@
         <form action="responseSubmit.php" method="POST">
             <h2 class="text-center">Wildlife Tracking Report</h2>
             <div class="form-group" style="text-align: left;"><label style="margin-bottom: 0px;">* Animal Observed:</label>
-              <select name="species" class="form-control" style="margin-bottom: 12px;" required="">
+              <select name="animal" class="form-control" style="margin-bottom: 12px;" required="">
                     <option value="" selected="">- Select an Option -</option>
                     <option value="Bat">Bat</option>
                     <option value="Bird">Bird</option>
@@ -28,7 +28,7 @@
                     <option value="Dear">Deer</option>
                     <option value="Wolf">Wolf</option>
                     <option value="">Other</option>
-                </select><input class="form-control" type="text" name="species_other" placeholder="Other animal..."><input class="form-control" type="text" name="species" placeholder="Species (optional)" style="padding-bottom: 12px;padding-top: 12px;margin-top: 22px;"><label style="padding-top: 22px;">If any of the following are selected, a copy of this report will automatically be forwarded to your municipal government for review.</label>
+                </select><input class="form-control" type="text" name="animal_other" placeholder="Other animal..."><input class="form-control" type="text" name="species" placeholder="Species (optional)" style="padding-bottom: 12px;padding-top: 12px;margin-top: 22px;"><label style="padding-top: 22px;">If any of the following are selected, a copy of this report will automatically be forwarded to your municipal government for review.</label>
                 <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">Does the animal pose a risk to public safety? (i.e. the animal appears to be aggressive or is a large predatory species such as a bear or cougar in an urban area)</label></div>
                 <div class="form-check" style="padding-top: 12px;"><input class="form-check-input" type="checkbox" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Does the animal appear to be injured, in distress, or show visible signs of disease?</label></div>
             </div><label>You can choose to provide your contact information to receive a follow up on your report from your municipal government.</label><input class="form-control" type="text" name="name" placeholder="Name"><input class="form-control" type="text" name="email" placeholder="Email" style="padding-bottom: 6px;">
