AHHH required name ughhhhhhh & postgres connection

--- a/report.html
+++ b/report.html
@@ -18,7 +18,7 @@
         <form action="responseSubmit.php" method="POST">
             <h2 class="text-center">Wildlife Tracking Report</h2>
             <div class="form-group" style="text-align: left;"><label style="margin-bottom: 0px;">* Animal Observed:</label>
-              <select name="animal" style="margin-bottom: 12px;">
+              <select class="form-control" style="margin-bottom: 12px;" required name="animal">
                     <option value="" selected="">- Select an Option -</option>
                     <option value="Bat">Bat</option>
                     <option value="Bird">Bird</option>
