Did I ever save the required name? If so then I dead

--- a/report.html
+++ b/report.html
@@ -49,8 +49,8 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script>
-    //Pass location to php
-
+      //Pass location to php
+      navigator.geolocation.getCurrentPosition(showPosition);
     </script>
 </body>
 
