--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <html>
 <head>
+  <link rel="stylesheet" href="assets/css/Footer-Basic.css">
   <title>
     BC Tracks
   </title>
 </head>
+<style>
+a:hover{
+  content: url(assets/img/report_icon_white.png);
+  width: 50px;
+  float:left;
+  position:relative;
+  left:30;
+  top: 40;
+}
+</style>
 <body style="background-color:#1484C3;">
   <div id="logo" style="text-align:center">
-    <img src="assets/img/BC Tracks Logo Cropped.png" height="20%">
+    <img src="assets/img/BC Tracks Logo Cropped.png" style = "float:center; height:150px; position:relative; right: 80px;">
+    <a href="report.html"><img src="assets/img/report_icon_black.png" title="Submit a tracking report" style = "width: 50px; float:left; position:relative; left:30; top: 40;"></a>
+    <img src="assets/img/report_text.png" style="float:left; position:relative; left: 35; height: 125px;">
   </div>
-  <a href="report.html"><img src="assets/img/Form Button Icon.png" width="50px"></a>
   <div>
-    <iframe src="https://qgiscloud.com/megreen/BC_Tracks/" title="map" width="100%" height="70%">
+    <iframe src="https://qgiscloud.com/megreen/BC_Tracks/" title="map" width="100%" height="80%">
   </div>
-  <footer class="footer-basic" height ="10%">
+
+  <footer class="footer-basic">
       <ul class="list-inline text-center">
           <li class="list-inline-item"><a href="index.html">Home</a></li>
           <li class="list-inline-item"></li>
