--- a/report.html
+++ b/report.html
@@ -28,9 +28,17 @@
                     <option value="Dear">Deer</option>
                     <option value="Wolf">Wolf</option>
                     <option value="">Other</option>
-                </select><input class="form-control" type="text" name="animal_other" placeholder="Other animal..."><input class="form-control" type="text" name="species" placeholder="Species (optional)" style="padding-bottom: 12px;padding-top: 12px;margin-top: 22px;"><label style="padding-top: 22px;">If any of the following are selected, a copy of this report will automatically be forwarded to your municipal government for review.</label>
-                <div class="form-check"><input class="form-check-input" type="checkbox" name="risk" id="formCheck-1"><label class="form-check-label" for="formCheck-1">Does the animal pose a risk to public safety? (i.e. the animal appears to be aggressive or is a large predatory species such as a bear or cougar in an urban area)</label></div>
-                <div class="form-check" style="padding-top: 12px;"><input class="form-check-input" type="checkbox" name="distress" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Does the animal appear to be injured, in distress, or show visible signs of disease?</label></div>
+                </select>
+                <input class="form-control" type="text" name="animal_other" placeholder="Other animal...">
+                <input class="form-control" type="text" name="species" placeholder="Species (optional)" style="padding-bottom: 12px;padding-top: 12px;margin-top: 22px;">
+                <label style="padding-top: 22px;">If any of the following are selected, a copy of this report will automatically be forwarded to your municipal government for review.</label>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" name="risk" id="formCheck-1">
+                  <label class="form-check-label" for="formCheck-1">Does the animal pose a risk to public safety? (i.e. the animal appears to be aggressive or is a large predatory species such as a bear or cougar in an urban area)</label></div>
+                <div class="form-check" style="padding-top: 12px;">
+                  <input class="form-check-input" type="checkbox" name="distress" id="formCheck-2">
+                  <label class="form-check-label" for="formCheck-2">Does the animal appear to be injured, in distress, or show visible signs of disease?</label>
+                </div>
             </div><label>You can choose to provide your contact information to receive a follow up on your report from your municipal government.</label><input class="form-control" type="text" name="name" placeholder="Name"><input class="form-control" type="text" name="email" placeholder="Email" style="padding-bottom: 6px;">
             <div class="form-group"><textarea class="form-control" name="notes" placeholder="Additional Notes" rows="14"></textarea></div>
             <div class="form-group"><button class="btn btn-primary" type="submit">send </button></div>
