--- a/report.html
+++ b/report.html
@@ -36,11 +36,8 @@
         </form>
         <footer class="footer-basic">
             <ul class="list-inline text-center">
-                <li class="list-inline-item"><a href="index.html">Home</a></li>
-                <li class="list-inline-item"></li>
-                <li class="list-inline-item text-center"><a href="#">About</a></li>
-                <li class="list-inline-item"></li>
-                <li class="list-inline-item"></li>
+                <li class="list-inline-item text-center"><a href="index.html">Home</a></li>
+                <li class="list-inline-item text-center"><a href="about.html">About</a></li>
             </ul>
             <p class="copyright">BC Tracks - BC Hacks 2.0&nbsp; &nbsp; &nbsp;2021</p>
         </footer>
