goodies and htmlsies

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta charset="utf-8">
   <title>
     BC Tracks - About
   </title>
@@ -20,7 +21,7 @@ Contact information can be optionally provided to receive a follow up once the r
 <br><br>
 BC Tracks aims to provide BC residents and municipalities with a better understanding of wildlife populations in their area, whether it be to aid in locating the perfect spot for bird watching, to avoid dangerous wildlife encounters, or to assist in conservation efforts.
 </p>
-<div style= "text-align: center;">
+<div style= "text-align: center; padding: 0px 5px 5px">
 <img src="assets/img/bear_paw.png" style="float:center; height: 70px;">
 </div>
   </div>
