--- a/report.html
+++ b/report.html
@@ -39,7 +39,11 @@
                   <input class="form-check-input" type="checkbox" name="distress" id="formCheck-2">
                   <label class="form-check-label" for="formCheck-2">Does the animal appear to be injured, in distress, or show visible signs of disease?</label>
                 </div>
-            </div><label>You can choose to provide your contact information to receive a follow up on your report from your municipal government.</label><input class="form-control" type="text" name="name" placeholder="Name"><input class="form-control" type="text" name="email" placeholder="Email" style="padding-bottom: 6px;">
+            </div>
+            <label style="margin-bottom:0px"><h5>Contact Info</h5></label>
+            <label style="margin-top:0px;">You can choose to provide your contact information to receive a follow up on your report from your municipal government.</label>
+            <input class="form-control" type="text" name="name" placeholder="Name" style="margin-top: 6px; margin-bottom: 12px;">
+            <input class="form-control" type="text" name="email" placeholder="Email" style="margin-bottom: 22px;">
             <div class="form-group"><textarea class="form-control" name="notes" placeholder="Additional Notes" rows="14"></textarea></div>
             <div class="form-group"><button class="btn btn-primary" type="submit">send </button></div>
         </form>
