one button commit!

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <style>
 #report:hover{
-  content: url(assets/img/report_icon_white.png);
-  width: 70px;
+  content: url(assets/img/report_button_white.png);
   float:left;
   position:relative;
-  left:20;
-  top:50;
+  left: 30;
+  top: 35;
+  height: 100px;
 }
 #about:hover{
   content: url(assets/img/about_white_large.png);
@@ -25,9 +25,8 @@
 </style>
 <body style="background-color:#1484C3;">
   <div id="logo" style="text-align:center">
-    <img src="assets/img/BC_Tracks_Logo_Large.png" style = "float:center; height:175px; position:relative; right: 25px;">
-<img src="assets/img/report_text_large.png" style="float:left; position:relative; left: 25; top: 35; height: 100px;">
-    <a href="report.html" id="report"><img src="assets/img/report_icon_black.png" title="Submit a tracking report" style = "width: 70px; float:left; position:relative; left:20; top: 50;"></a>
+    <img src="assets/img/BC_Tracks_Logo_Large.png" style = "float:center; height:175px; position:relative;">
+    <a href="report.html" id="report"><img src="assets/img/report_button_black.png" style="float:left; position:relative; left: 30; top: 35; height: 100px;">
     <a href="about.html" id="about" ><img src="assets/img/about_black_large.png" style="float:right; position:relative; right: 45; top: 37; height: 100px;"></a>
   </div>
   <div>
