logo size change

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color:#1484C3; background-attachment: fixed;">
   <div id="logo" style="text-align:center">
-    <img src="assets/img/BC Tracks Logo Cropped.png" height="150px">
+    <img src="assets/img/BC_Tracks_Logo_Large.png" height="175px">
   </div>
 
   <div id = textwrap style= "margin-bottom: 30%;">
