--- a/report.html
+++ b/report.html
@@ -25,7 +25,7 @@
                     <option value="Bear">Bear</option>
                     <option value="Cougar">Cougar</option>
                     <option value="Coyote">Coyote</option>
-                    <option value="Dear">Deer</option>
+                    <option value="Deer">Deer</option>
                     <option value="Wolf">Wolf</option>
                     <option value="Other">Other</option>
                 </select>
@@ -59,6 +59,7 @@
     </section>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=" + process.env.gmaps_key + "&callback=initMap"></script>
     <script>
       //Pass location to php
 
